# Cuda

./: .gitignore  CMakeLists.txt  CudaOpenCvImagePipeline.sln  CudaOpenCvImagePipeline.vcxproj  CudaOpenCvImagePipeline.vcxproj.filters  MODIFICATION_NOTES.md
src/: cuda_image_pipeline.cu
